fixing spacing and small viewport buttons being cut off for code page

--- a/src/apps/code-editor/src/app/components/FileActions/FileActions.less
+++ b/src/apps/code-editor/src/app/components/FileActions/FileActions.less
@@ -41,7 +41,10 @@
         margin: 0;
         padding: 0;
         text-shadow: none;
-        color: @zesty-white;
+        margin-right: 8px;
+        &:hover {
+          opacity: 0.7;
+        }
       }
     }
   }
